cambio en la frase del inicio y cambio de tipografía

--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -1,7 +1,6 @@
 ---
 import Button from '../components/Button.astro';
 
-
 import SobreMi from './sections/SobreMi_section.astro';
 
 import Habilidades from './sections/Habilidades_section.astro';
@@ -20,7 +19,7 @@ const descripcion_corta = "<Desarrollador web/>";
             <h2 class="text-2xl font-extrabold text-claro leading-tight">{descripcion_corta}</h2>
             <h1 class="text-3xl md:text-5xl font-extrabold text-claro leading-tight">{h1}</h1>
            
-            <p class="text-md font-semibold py-3 text-gray-300">Apasionado por la tecnología <span class="text-lg"> front-end.</span> Me mantengo en constante crecimiento, explorando nuevas tecnologías y mejorando mis habilidades para crear experiencias web innovadoras y atractivas.</p>
+            <p class="text-md font-semibold py-3 text-gray-300">Soy un amante de la tecnología <span class="text-lg">front-end</span>, siempre en busca de nuevas aventuras y retos. Me encanta explorar las últimas tendencias y herramientas para crear experiencias web que cautiven y sorprendan. Siempre estoy en modo aprendizaje, ¡así que esperen verme probando cosas nuevas todo el tiempo!</p>
             <div class="flex justify-center lg:justify-start gap-10">
                 <div class="md:flex md:gap-10">
                     <Button title='Habilidades' href='#habilidades' bg_color='bg-azul'></Button>
