--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import '@fontsource-variable/public-sans';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 interface Props {
@@ -27,7 +28,7 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	html {
-		font-family: system-ui, sans-serif;
+		font-family: "Public Sans Variable",system-ui;
 		scroll-behavior: smooth;
 	}
 	code {
