--- a/src/layouts/Proyectos.astro
+++ b/src/layouts/Proyectos.astro
@@ -1,7 +1,6 @@
 ---
-import Header from '../components/Header.astro';
+import '@fontsource-variable/public-sans';
 
-const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -20,7 +19,7 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	html {
-		font-family: system-ui, sans-serif;
+		font-family: "Public Sans Variable",system-ui;
 	}
 	code {
 		font-family:
