--- a/src/components/CardProyectos.astro
+++ b/src/components/CardProyectos.astro
@@ -14,7 +14,7 @@ const {title,body,tecnologies, thumbnail, urlProyecto, githubUrl} = Astro.props;
 
 
 
-<div class="card_shine_effect group max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+<div class="card_shine_effect group max-w-sm  border rounded-lg shadow bg-gray-800 border-gray-700">
     <div class="fondo_opaco hidden cursor-pointer">
     </div>
     <!-- <div class="md:hidden">
@@ -26,9 +26,9 @@ const {title,body,tecnologies, thumbnail, urlProyecto, githubUrl} = Astro.props;
 
     <div class="p-5">
         <a href="#">
-            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{title}</h5>
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">{title}</h5>
         </a>
-        <p class="font-normal text-gray-700 dark:text-gray-400">{body}</p>
+        <p class="font-normal text-gray-400">{body}</p>
         <h5 class="font-md text-white font-semibold my-3">Tecnologías</h5>
         <div class="my-3 flex flex-row flex-wrap gap-2"> 
             {tecnologies.map((item) => (
@@ -37,7 +37,7 @@ const {title,body,tecnologies, thumbnail, urlProyecto, githubUrl} = Astro.props;
         </div>
         
         <div class="mt-6 flex gap-3">
-            <a href={urlProyecto} class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            <a href={urlProyecto} class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white  rounded-lg  focus:ring-4 focus:outline-none  bg-blue-600 hover:bg-blue-700 focus:ring-blue-800">
             Ver más
              <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
