--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -14,7 +14,7 @@ const descripcion_corta = "<Desarrollador web/>";
 ---
 
 <main class="contenedor mx-auto py-5 md:py-14 lg:py-32" id="inicio">
-    <div class="flex flex-col items-end md:flex-row md:items-center gap-5 lg:gap-16 animate-fade-right animate-duration-1000 animate-delay-300">
+    <div class="flex flex-col items-end md:flex-row md:items-center gap-5 lg:gap-16">
         <div class="order-2">
             <h2 class="text-2xl font-extrabold text-claro leading-tight">{descripcion_corta}</h2>
             <h1 class="text-3xl md:text-5xl font-extrabold text-claro leading-tight">{h1}</h1>
@@ -59,7 +59,7 @@ const descripcion_corta = "<Desarrollador web/>";
 
 <!-- BTN VOLVER ARRIBA -->
 <a href="#top" class="fixed bottom-8 right-8 p-2 rounded-full bg-black">
-    <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+    <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m5 15 7-7 7 7"/>
       </svg>      
 </a>
