--- a/src/components/ProyectosComponent.astro
+++ b/src/components/ProyectosComponent.astro
@@ -14,7 +14,7 @@ const { items} = Astro.props;
     <ul class="flex flex-wrap justify-center lg:justify-start -mb-px">
         {items.map((item, index) => (
           <li class="me-2">
-            <a href={item.href} class=`btns ${index === 0 ? 'text-claro underline' : ''} inline-block p-4 border-b-2 border-transparent hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300`>{item.title}</a>
+            <a href={item.href} class=`btns ${index === 0 ? 'text-claro underline' : ''} inline-block p-4 border-b-2 border-transparent hover:border-gray-300 hover:text-gray-300`>{item.title}</a>
           </li>
         ))}  
     </ul>
@@ -36,7 +36,7 @@ const { items} = Astro.props;
       <div class="block">
         <div id="accordion-collapse" data-accordion="collapse">
           <h2 id="accordion-collapse-heading-1">
-            <button type="button" class="flex items-center rounded-sm justify-between w-full p-5 font-medium rtl:text-right text-gray-500 border  border-claro focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800  dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 gap-3" data-accordion-target=`#accordion-collapse-body-${index}` aria-expanded="true" aria-controls="accordion-collapse-body-1">
+            <button type="button" class="flex items-center rounded-sm justify-between w-full p-5 font-medium rtl:text-right  border  border-claro focus:ring-4  focus:ring-gray-800  text-gray-400  hover:bg-gray-800 gap-3" data-accordion-target=`#accordion-collapse-body-${index}` aria-expanded="true" aria-controls="accordion-collapse-body-1">
               <span class="text-claro">Explicación.</span>
               <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
@@ -89,13 +89,10 @@ const { items} = Astro.props;
 
   const accordionItems = document.querySelectorAll('[data-accordion-target]');
 
-  console.log(accordionItems);
-
   accordionItems.forEach(item => {
       item.addEventListener('click', function () {
        
           const target = item.getAttribute('data-accordion-target');
-          console.log(target);
           if (target) {
             const element = document.querySelector(target);
             if (element) {
