rutas absolutas para imagenes y videos y eliminacion de imagen

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import HeaderItems from '../components/HeaderItems.astro';
   <nav class="flex contenedor items-center justify-between" aria-label="Global">
     <div class="flex lg:flex-1" id="logotipo">
       <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="../../public/img//logo.png" class="w-24" alt="Logotipo" />
+        <img src="/public/img//logo.png" class="w-24" alt="Logotipo" />
       </a>
     </div>
     <div class="flex lg:hidden ">
