--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -34,7 +34,7 @@ const descripcion_corta = "<Desarrollador web/>";
                 <div class="flex justify-center items-stretch">
                     <Button 
                         title='Ver CV' 
-                        href='../../public/PedroLuisOnateEgea.pdf' 
+                        href='/public/PedroLuisOnateEgea.pdf' 
                         bg_color='bg-verde'
                         download="PedroLuisOnateEgea">
                     </Button>
