Revert "rutas absolutas segundo cambio"
This reverts commit ad76236345a9bf7c4804200151358f7cd8aca3e4.

--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -34,7 +34,7 @@ const descripcion_corta = "<Desarrollador web/>";
                 <div class="flex justify-center items-stretch">
                     <Button 
                         title='Ver CV' 
-                        href='/PedroLuisOnateEgea.pdf' 
+                        href='/public/PedroLuisOnateEgea.pdf' 
                         bg_color='bg-verde'
                         download="PedroLuisOnateEgea">
                     </Button>
@@ -43,7 +43,7 @@ const descripcion_corta = "<Desarrollador web/>";
         </div>
         <div class="w-fit md:min-w-72 lg:md:min-w-96 mx-auto    md:order-2 drop-shadow-sm">
             <div class="absolute hidden md:block w-full h-44 bg-verde rounded-full left-10 bottom-0 -z-10"></div> 
-            <img src="/img/img_principal.png" alt="" class="w-fit  h-fit drop-shadow-2xl">
+            <img src="/public/img/img_principal.png" alt="" class="w-fit  h-fit drop-shadow-2xl">
         </div>
     </div>
 </main>
