--- a/src/pages/todo.astro
+++ b/src/pages/todo.astro
@@ -9,7 +9,7 @@ import ProyectosComponent from '../components/ProyectosComponent.astro';
 			{
 				title: "Explicación", 
 				href: "#explicacion", 
-				mainImage: "/img/proyectoTodo.png", 
+				mainImage: "/public/img/proyectoTodo.png", 
 				mainTitle: "TodoApp", 
 				mainBody: "Está inspirada en la versatilidad de Trello, ofrece una gama de funcionalidades clave para mejorar la gestión de proyectos. Incluye un sistema de inicio de sesión seguro, una interfaz intuitiva de arrastrar y soltar, capacidades CRUD para categorías y tareas, estadísticas detalladas para el seguimiento del progreso del proyecto, así como un calendario integrado para la planificación eficiente. Está combinación de características proporciona a los usuarios una experiencia completa y flexible para organizar, priorizar y realizar un seguimiento efectivo de sus proyectos y tareas."},
 			{
@@ -41,7 +41,7 @@ import ProyectosComponent from '../components/ProyectosComponent.astro';
                         <li class="ml-5">El correo electrónico no está registrado por lo que no puedes iniciar sesión.</li>
 						<li class="ml-5">Las credenciales son correctas y entras a la aplicación.</li>
                     </ol>`,
-					videoExplicativo: "/videos/login.mp4"
+					videoExplicativo: "/public/videos/login.mp4"
 			},
 			{
 				title: "CRUD categorias", 
@@ -55,7 +55,7 @@ import ProyectosComponent from '../components/ProyectosComponent.astro';
                     <p class='text-md my-3'>
                         Cada categoría está relacionada con un usuario en concreto.
                     </p>`,
-					videoExplicativo: "/videos/categorias.mp4"
+					videoExplicativo: "/public/videos/categorias.mp4"
 			},
 			{
 				title: "CRUD tareas", 
@@ -78,7 +78,7 @@ import ProyectosComponent from '../components/ProyectosComponent.astro';
                     <p class='text-md my-3'>
                         Cada tarea está relacionada con una categoría que a su vez se relaciona con el usuario.
                     </p>`,
-					videoExplicativo: "/videos/tareas.mp4"
+					videoExplicativo: "/public/videos/tareas.mp4"
 			},
 			{
 				title: "Funcionalidades", 
@@ -97,7 +97,7 @@ import ProyectosComponent from '../components/ProyectosComponent.astro';
 						<li class="ml-5">Una vez que las tareas lleguen a "Hechas" podrás finalizar una tarea o darle al icono verde y finalizar todas de golpe.</li>
                     </ol>
 `,
-					videoExplicativo: "/videos/funcionalidades.mp4"
+					videoExplicativo: "/public/videos/funcionalidades.mp4"
 			},
 			{
 				title: "Calendario y estadísticas", 
@@ -116,7 +116,7 @@ import ProyectosComponent from '../components/ProyectosComponent.astro';
                     <p class='text-md my-3'>
                         Cada tarea está relacionada con una categoría que a su vez se relaciona con el usuario.
                     </p>`,
-					videoExplicativo: "/videos/calendario.mp4"
+					videoExplicativo: "/public/videos/calendario.mp4"
 			},
 			]}>
 	</ProyectosComponent>
