rutas absolutas con public para los sections

--- a/src/components/sections/Proyectos_section.astro
+++ b/src/components/sections/Proyectos_section.astro
@@ -11,7 +11,7 @@ import CardProyectos from '../CardProyectos.astro';
                 title='TodoApp' 
                 body='Aplicacion para organizar tus tareas de manera sencilla con un sistema de soltar, arrastrar y 5 funcionalidades más.'
                 tecnologies={[{title: "Angular", color: "bg-red-400"},{title:  "Springboot", color: "bg-green-400"},{title: "MySQL", color: "bg-teal-400"}]} 
-                thumbnail='/img/proyectoTodo.png' 
+                thumbnail='/public/img/proyectoTodo.png' 
                 urlProyecto='/todo'
                 githubUrl='https://github.com/Pedroooo12/ToDoApp'
                 ></CardProyectos>
@@ -21,7 +21,7 @@ import CardProyectos from '../CardProyectos.astro';
                 title='JsonApp' 
                 body='Aplicacion para convertir archivos JSON en interfaces de TypeScript de forma automática pasando archivos o escribiendo el JSON.'
                 tecnologies={[{title: "Angular", color: "bg-red-400"},{title:  "Tailwind", color: "bg-purple-400"}]} 
-                thumbnail='/img/proyectoJson.png' 
+                thumbnail='/public/img/proyectoJson.png' 
                 urlProyecto='/json'
                 githubUrl='https://github.com/Pedroooo12/AppJSON'
                 urlWebsite='https://appjson.netlify.app'
