--- a/src/components/sections/SobreMi_section.astro
+++ b/src/components/sections/SobreMi_section.astro
@@ -5,7 +5,7 @@
             <div class="absolute hidden md:block w-80 h-80 bg-azul rounded-full right-0 bottom-0 -z-10"></div> 
             <div class="absolute hidden md:block w-44 h-44 bg-violeta rounded-full left-0 top-0 -z-10"></div> 
                 <img src="/img/img.png" alt="Nuevo" class="rounded-xl w-full max-w-md drop-shadow-2xl img_animacion" loading="lazy" width="1270" height="1652"> 
-            
+            </div>
         </div> 
         <div class="place-self-center"> 
             <h2 class="text-5xl text-white tracking-tight -mt-2"> 
